--- a/package.json
+++ b/package.json
@@ -18,5 +18,13 @@
   },
   "scripts": {
     "start": "cds-serve"
-  }
+  },
+  "cds": {
+    "requires": {
+      "db": {
+        "kind": "sqlite",
+        "credentials": { "url": "db.sqlite" } 
+      }
+    }
+  }  
 }
