--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
+    "@cap-js-community/odata-v2-adapter": "^1.15.2",
     "@sap/cds": "^9",
     "express": "^4"
   },
@@ -13,8 +14,8 @@
     "node": ">=20"
   },
   "devDependencies": {
-    "@cap-js/sqlite": "^2",
-    "@cap-js/cds-types": "^0.12.0"
+    "@cap-js/cds-types": "^0.12.0",
+    "@cap-js/sqlite": "^2"
   },
   "scripts": {
     "start": "cds-serve"
@@ -23,8 +24,10 @@
     "requires": {
       "db": {
         "kind": "sqlite",
-        "credentials": { "url": "db.sqlite" } 
+        "credentials": {
+          "url": "db.sqlite"
+        }
       }
     }
-  }  
+  }
 }
